# elheif

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  web-test-runner.config.mjs
.github/workflows/: main.yml
core/: CMakeLists.txt
core/include/: impl.h
core/src/: impl.cpp
js-tests/: image.test.ts
pkg/: index.d.ts  index.js
scripts/: copy-product.mjs  install-emscripten.mjs  patch-js.mjs
tests/: CMakeLists.txt  test.cpp
wasm/: CMakeLists.txt
wasm/src/: impl.cpp  post.js
